# cvc

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
designs/: decision_engine.md  features.md  proof_of_concept.md  proposal_response.md  questions.md
notebooks/: learning.ipynb
src/: action.cpp  action.h  action_factories.cpp  action_factories.h  core.cpp  core.h  crunchedin.h  decision_engine.cpp  decision_engine.h  main.cpp  sarsa_action_factories.cpp  sarsa_action_factories.h  sarsa_agent.cpp  sarsa_agent.h  sarsa_learner.h  util.h
src/crunchedin/: crunchedin.h  crunchedin_action_factories.h
src/sarsa/: sarsa_action_factories.cpp  sarsa_action_factories.h  sarsa_agent.cpp  sarsa_agent.h  sarsa_learner.h
test/: core_test.cpp  decision_engine_test.cpp  sarsa_agent_test.cpp
